fix/popup z-index*2

--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -12,7 +12,6 @@
   justify-content: center;
   background-color: rgba(0, 0, 0, 0.5);
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.15);
-  z-index: 2;
   visibility: hidden;
   transition: visibility 0.3s linear, opacity 0.3s linear;
   opacity: 0;
